Working solution with docker